webapps.wiki: fix pre dark mode

--- a/extra/webapps/wiki/wiki-contents.css
+++ b/extra/webapps/wiki/wiki-contents.css
@@ -47,4 +47,8 @@
         background-color: #373e48;
         border-right: 1px solid #666;
     }
+
+    .description pre {
+        color: black;
+    }
 }
